--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "moment": "^2.29.4",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.2",
+    "socket.io": "^4.6.1",
     "telegraf": "^4.11.2"
   }
 }
